<resources>
    <string name="app_name">SmartJug</string>
    <string name="txt_mail">Email</string>
    <string name="txt_pass">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="register">S\'enregister</string>
    <string name="string_woman">Femme</string>
    <string name="string_men">Homme</string>
    <string name="string_name">Nom</string>
    <string name="string_lastname">Prémon</string>
    <string name="err_message_invalid_mail">Veuillez saisir un mail valide</string>
    <string name="err_message_empty_form">Veuillez remplire tous les champs</string>
    <string name="err_message_invalid_data">Email ou mot de passe invalide</string>
    <string name="err_message_invalid_data_2">Une ou plusieurs valeurs incorrects</string>
    <string name="height">Taille en cm</string>
    <string name="weight">Poids en kilos</string>
    <string name="ok_button">Ok</string>
    <string name="_cancel_button">Annuler</string>
    <string name="account_created">Vous pouvez desormais vous connecter</string>
    <string name="wrong">Un problème est survenu</string>
    <string name="measurement">Mensurations</string>
    <string name="info">Infos</string>
    <string name="step_two">Continuer</string>
    <string name="msg_next_stape">Vous allez maintenant lier votre "SmartJug" à votre compte,Munissez vous de votre ORCode </string>
    <string name="jug">Smart-</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="congratulation">Félicitations, votre compte a été créé avec succès</string>
    <string name="settings_title">Paramètre</string>
    <string name="about">A propos</string>
    <!--Drawer-->
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!-- Account-->
    <string name="profile">Profil</string>
    <string name="activity">activité</string>
    <string name="water_data">suivi conso</string>
    <string name="logout">Déconnexion</string>
    <string name="logout_message">Voulez-vous vraiment vous deconnecter?</string>
    <string name="loader_string">chargement...</string>
    <string name="delete_account">Supprimer votre Compte</string>

    <string-array name="item_menu">
        <item>Mon compte</item>
        <item>Paramètre</item>
        <item>Déconnexion</item>
    </string-array>
    <string-array name="settings_menu">
        <item>Nous Contacter</item>
        <item>Dissocier de votre SmartJug</item>
        <item>Supprimer vos données SmartJug</item>
        <item>A propos de SmartJug</item>
    </string-array>
</resources>
